Modified jupyter notebook to correctly find json files

--- a/DataProject.ipynb
+++ b/DataProject.ipynb
@@ -24,8 +24,8 @@
     "%matplotlib inline\n",
     "\n",
     "# Read in json files and create dataframes\n",
-    "data = pd.read_json('2017-02-23.AllRecipes.json')\n",
-    "data2 = pd.read_json('2017-03-14.AllRecipes.json')"
+    "data = pd.read_json('JSON/old/2017-02-23.AllRecipes.json')\n",
+    "data2 = pd.read_json('JSON/old/2017-03-14.AllRecipes.json')"
    ]
   },
   {
