Add dataframes and questions to Jupyter Notebook project file

--- a/JSON/Untitled.ipynb
+++ b/JSON/Untitled.ipynb
@@ -19,331 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Author</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Megan Croy Reed</td>\n",
-       "      <td>Cook beef, tomatoes, carrots, potatoes, celery...</td>\n",
-       "      <td>Easy Beef Stew for the Slow Cooker</td>\n",
-       "      <td>4.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Debbie</td>\n",
-       "      <td>This quick and tasty main dish has a double hi...</td>\n",
-       "      <td>Sesame Shrimp Stir-Fry</td>\n",
-       "      <td>4.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Jeffery Hunt</td>\n",
-       "      <td>Breathe new life into an old meatloaf recipe w...</td>\n",
-       "      <td>BBQ Oatmeal Meatloaf</td>\n",
-       "      <td>4.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chef John</td>\n",
-       "      <td>This soul-warming soup is deliciously simple--...</td>\n",
-       "      <td>Chef John's Homemade Chicken Noodle Soup</td>\n",
-       "      <td>4.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Chef John</td>\n",
-       "      <td>Anybody can add water to a boxed pancake mix, ...</td>\n",
-       "      <td>Old-Fashioned Pancakes</td>\n",
-       "      <td>4.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>MyPlate</td>\n",
-       "      <td>Boneless pork loin chops are simmered in a Mar...</td>\n",
-       "      <td>Pork Marsala</td>\n",
-       "      <td>4.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>wv_mtnr_cook_78</td>\n",
-       "      <td>A cream cheese and onion mixture fills these c...</td>\n",
-       "      <td>Stuffed and Wrapped Chicken Breast</td>\n",
-       "      <td>4.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>TI2GR</td>\n",
-       "      <td>Rich and sweet with chocolate chips and walnut...</td>\n",
-       "      <td>Chocolate Chip Banana Bread II</td>\n",
-       "      <td>4.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Chef John</td>\n",
-       "      <td>Chef John's quick and easy recipe for butter-r...</td>\n",
-       "      <td>Butter-Roasted Cauliflower</td>\n",
-       "      <td>4.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>aidacontadora</td>\n",
-       "      <td>These Mexican deviled prawns (camarones a la d...</td>\n",
-       "      <td>Camarones a la Diabla (Mexican Deviled Prawns)</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Consuelo Aguilar</td>\n",
-       "      <td>Pozole rojo, a traditional Mexican pork and ho...</td>\n",
-       "      <td>Pozole Rojo (Mexican Pork and Hominy Stew)</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Houstonchef</td>\n",
-       "      <td>Rich and decadent, this recipe raises the bar ...</td>\n",
-       "      <td>Lobster and Grits with Chorizo</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Christiana McCormick</td>\n",
-       "      <td>Cinnamon in the batter adds an unexpected and ...</td>\n",
-       "      <td>Cinnamon Pancakes</td>\n",
-       "      <td>5.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Drea</td>\n",
-       "      <td>Yellow batter layered with cinnamon sugar is g...</td>\n",
-       "      <td>Grandma's Honey Bun Cake</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Heather: Healthy Vegan Recipes</td>\n",
-       "      <td>Whole grain penne pasta is tossed with a fresh...</td>\n",
-       "      <td>Avocado Pasta</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>daidai</td>\n",
-       "      <td>This recipe for tteok, a Korean cake made with...</td>\n",
-       "      <td>Korean Rice Cake (Tteok)</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>25 Peppers</td>\n",
-       "      <td>This North African twist on Spanish paella mad...</td>\n",
-       "      <td>North African Paella</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Tony0314</td>\n",
-       "      <td>This quick and easy Chinese-style seaweed sala...</td>\n",
-       "      <td>Easy Seaweed Salad</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Randy</td>\n",
-       "      <td>This old-fashioned double-crust pie made with ...</td>\n",
-       "      <td>Old-Fashioned Elderberry Pie</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>April Broxton</td>\n",
-       "      <td>Fresh elderberries are mixed with sugar and co...</td>\n",
-       "      <td>Elderberry Pie</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>FLIPAPPEAL</td>\n",
-       "      <td>Shrimp is arranged on a bed of spinach tossed ...</td>\n",
-       "      <td>Spinach Shrimp Salad with Miso Dressing</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>davey</td>\n",
-       "      <td>Bread dough stuffed with layers of mortadella,...</td>\n",
-       "      <td>Italian Stuffed Bread</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>graciethebaker</td>\n",
-       "      <td>Barmbrack, an easy bread made with dried fruit...</td>\n",
-       "      <td>Gracie's Barmbrack</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Anna Schreiber</td>\n",
-       "      <td>These oatmeal pancakes with cinnamon, applesau...</td>\n",
-       "      <td>Oatmeal Cinnamon Pancakes</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>DARBLEY13</td>\n",
-       "      <td>Kropsua, a baked Finnish pancake, is quick and...</td>\n",
-       "      <td>Kropsua (Finnish Pancake)</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>ChefNYC</td>\n",
-       "      <td>Blueberries and almond extract are the star in...</td>\n",
-       "      <td>Blueberry Almond Pancakes</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>mykoreaneats</td>\n",
-       "      <td>Tteokguk, a Korean rice cake soup, includes th...</td>\n",
-       "      <td>Tteokguk (Korean Rice Cake Soup)</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Sarah Adamson</td>\n",
-       "      <td>Squid ink pasta is tossed in a creamy white wi...</td>\n",
-       "      <td>Squid Ink Pasta with Calamari</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>bfr610</td>\n",
-       "      <td>This Polish kielbasa sausage, cabbage, and pot...</td>\n",
-       "      <td>Big Ray's Kielbasa Cabbage Skillet for a Crowd</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            Author  \\\n",
-       "0                  Megan Croy Reed   \n",
-       "1                           Debbie   \n",
-       "2                     Jeffery Hunt   \n",
-       "3                        Chef John   \n",
-       "4                        Chef John   \n",
-       "5                          MyPlate   \n",
-       "6                  wv_mtnr_cook_78   \n",
-       "7                            TI2GR   \n",
-       "8                        Chef John   \n",
-       "9                    aidacontadora   \n",
-       "10                Consuelo Aguilar   \n",
-       "11                     Houstonchef   \n",
-       "12            Christiana McCormick   \n",
-       "13                            Drea   \n",
-       "14  Heather: Healthy Vegan Recipes   \n",
-       "15                          daidai   \n",
-       "16                      25 Peppers   \n",
-       "17                        Tony0314   \n",
-       "18                           Randy   \n",
-       "19                   April Broxton   \n",
-       "20                      FLIPAPPEAL   \n",
-       "21                           davey   \n",
-       "22                  graciethebaker   \n",
-       "23                  Anna Schreiber   \n",
-       "24                       DARBLEY13   \n",
-       "25                         ChefNYC   \n",
-       "26                    mykoreaneats   \n",
-       "27                   Sarah Adamson   \n",
-       "28                          bfr610   \n",
-       "\n",
-       "                                          Description  \\\n",
-       "0   Cook beef, tomatoes, carrots, potatoes, celery...   \n",
-       "1   This quick and tasty main dish has a double hi...   \n",
-       "2   Breathe new life into an old meatloaf recipe w...   \n",
-       "3   This soul-warming soup is deliciously simple--...   \n",
-       "4   Anybody can add water to a boxed pancake mix, ...   \n",
-       "5   Boneless pork loin chops are simmered in a Mar...   \n",
-       "6   A cream cheese and onion mixture fills these c...   \n",
-       "7   Rich and sweet with chocolate chips and walnut...   \n",
-       "8   Chef John's quick and easy recipe for butter-r...   \n",
-       "9   These Mexican deviled prawns (camarones a la d...   \n",
-       "10  Pozole rojo, a traditional Mexican pork and ho...   \n",
-       "11  Rich and decadent, this recipe raises the bar ...   \n",
-       "12  Cinnamon in the batter adds an unexpected and ...   \n",
-       "13  Yellow batter layered with cinnamon sugar is g...   \n",
-       "14  Whole grain penne pasta is tossed with a fresh...   \n",
-       "15  This recipe for tteok, a Korean cake made with...   \n",
-       "16  This North African twist on Spanish paella mad...   \n",
-       "17  This quick and easy Chinese-style seaweed sala...   \n",
-       "18  This old-fashioned double-crust pie made with ...   \n",
-       "19  Fresh elderberries are mixed with sugar and co...   \n",
-       "20  Shrimp is arranged on a bed of spinach tossed ...   \n",
-       "21  Bread dough stuffed with layers of mortadella,...   \n",
-       "22  Barmbrack, an easy bread made with dried fruit...   \n",
-       "23  These oatmeal pancakes with cinnamon, applesau...   \n",
-       "24  Kropsua, a baked Finnish pancake, is quick and...   \n",
-       "25  Blueberries and almond extract are the star in...   \n",
-       "26  Tteokguk, a Korean rice cake soup, includes th...   \n",
-       "27  Squid ink pasta is tossed in a creamy white wi...   \n",
-       "28  This Polish kielbasa sausage, cabbage, and pot...   \n",
-       "\n",
-       "                                              Name  Rating  \n",
-       "0               Easy Beef Stew for the Slow Cooker    4.65  \n",
-       "1                           Sesame Shrimp Stir-Fry    4.42  \n",
-       "2                             BBQ Oatmeal Meatloaf    4.57  \n",
-       "3         Chef John's Homemade Chicken Noodle Soup    4.72  \n",
-       "4                           Old-Fashioned Pancakes    4.55  \n",
-       "5                                     Pork Marsala    4.56  \n",
-       "6               Stuffed and Wrapped Chicken Breast    4.38  \n",
-       "7                   Chocolate Chip Banana Bread II    4.80  \n",
-       "8                       Butter-Roasted Cauliflower    4.66  \n",
-       "9   Camarones a la Diabla (Mexican Deviled Prawns)    0.00  \n",
-       "10      Pozole Rojo (Mexican Pork and Hominy Stew)    0.00  \n",
-       "11                  Lobster and Grits with Chorizo    0.00  \n",
-       "12                               Cinnamon Pancakes    5.00  \n",
-       "13                        Grandma's Honey Bun Cake    0.00  \n",
-       "14                                   Avocado Pasta    0.00  \n",
-       "15                        Korean Rice Cake (Tteok)    0.00  \n",
-       "16                            North African Paella    0.00  \n",
-       "17                              Easy Seaweed Salad    0.00  \n",
-       "18                    Old-Fashioned Elderberry Pie    0.00  \n",
-       "19                                  Elderberry Pie    0.00  \n",
-       "20         Spinach Shrimp Salad with Miso Dressing    0.00  \n",
-       "21                           Italian Stuffed Bread    0.00  \n",
-       "22                              Gracie's Barmbrack    0.00  \n",
-       "23                       Oatmeal Cinnamon Pancakes    0.00  \n",
-       "24                       Kropsua (Finnish Pancake)    0.00  \n",
-       "25                       Blueberry Almond Pancakes    0.00  \n",
-       "26                Tteokguk (Korean Rice Cake Soup)    0.00  \n",
-       "27                   Squid Ink Pasta with Calamari    0.00  \n",
-       "28  Big Ray's Kielbasa Cabbage Skillet for a Crowd    0.00  "
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6137cde4893c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
     }
    ],
    "source": [
