--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary packages\n",
@@ -30,10 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataAllRecipes = pd.DataFrame(objectsAllRecipes)\n",
@@ -43,10 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -426,13 +420,73 @@
        "28                      Nazook (Sweet Persian Pastry)  4.55000019073486  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataAllRecipes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count = dataAllRecipes.Name[dataAllRecipes['Name'].str.contains('Chicken')].count()\n",
+    "count += dataAllRecipes.Name[dataAllRecipes['Name'].str.contains('chicken')].count()\n",
+    "count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "names = dataAllRecipes['Name'].str.contains('Chicken')\n",
+    "descriptions = dataAllRecipes['Description'].str.contains('Chicken')\n",
+    "print(names.size)\n",
+    "for x in range(0, names.size):\n",
+    "    if names.get(x):\n",
+    "        count += count\n",
+    "for x in range(0, descriptions.size):\n",
+    "    if descriptions.get(x):\n",
+    "        if not names.get(x):\n",
+    "            count += count\n",
+    "count"
    ]
   },
   {
@@ -448,9 +502,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -462,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
